added refresh button

--- a/journal/journal/Base.lproj/Main.storyboard
+++ b/journal/journal/Base.lproj/Main.storyboard
@@ -88,6 +88,12 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="7Nq-tj-9eX">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <connections>
+                            <action selector="refresh:" destination="0y6-Q0-vlS" eventType="valueChanged" id="fyD-sx-Ldk"/>
+                        </connections>
+                    </refreshControl>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ABK-3J-qxW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
