--- a/CoreJournal/CoreJournal/Base.lproj/Main.storyboard
+++ b/CoreJournal/CoreJournal/Base.lproj/Main.storyboard
@@ -82,6 +82,12 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="r9T-ot-yq8">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <connections>
+                            <action selector="refresh:" destination="vE6-eI-2CW" eventType="valueChanged" id="kjh-1P-CVb"/>
+                        </connections>
+                    </refreshControl>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HfP-Ry-iNX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
